# portable_std

./: .clang-format  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: cpp_compatibility.md
docs/: template_Doxyfile
std/: algorithm.h  concepts.h  cstring.h  expected.h  initializer_list.h  iterator.h  new.h  stddef.h  stdexcept.h  string.h  type_traits.h  utility.h  vector.h
tests/: os.cpp  test.cpp  test.h  vector.cpp
